practica-casa-23-julio

--- a/src/scss/blocks/generate-password-button.scss
+++ b/src/scss/blocks/generate-password-button.scss
@@ -5,17 +5,23 @@
   height: 60px;
   border: none;
   border-radius: 0.5rem;
-  background-color: #a200d4;
+  background-image: var(--purple-gradient);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0.25rem;
+  cursor: pointer;
+  transition: transform 0.2s;
 
   @include hover {
-    &:hover {
-      cursor: pointer;
+    &:not(:disabled):hover {
       transform: scale(0.95);
       transition: 0.2s;
-      opacity: 0.8;
+      opacity: 0.9;
     }
+  }
+
+  &:disabled {
+    background-image: none;
+    cursor: not-allowed;
   }
 }
