--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,10 +1,4 @@
 :root {
   /* Variables CSS */
-  /* escribir aquí */
-  --primary-color: red;
+  --purple-gradient: linear-gradient(to right, #7944e7, #8300ab);
 }
-
-/* Variables SASS */
-/* no usar estas */
-
-$primaryColor: red;
