--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@
 @use 'blocks/length-container.scss';
 @use 'blocks/range-container.scss';
 @use 'blocks/range-input.scss';
+@use 'blocks/include-options.scss';
 @use 'blocks/generate-password-button.scss';
 @use 'blocks/titles.scss';
 @use 'blocks/texts.scss';
